<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/ic_bg_rounded_sheet"
    android:paddingBottom="@dimen/_12sdp">

    <androidx.cardview.widget.CardView
        android:id="@+id/drag_handle"
        android:layout_width="@dimen/_48sdp"
        android:layout_height="@dimen/_4sdp"
        android:layout_gravity="center_horizontal"
        android:layout_marginVertical="@dimen/_10sdp"
        app:cardBackgroundColor="@color/colorIconOpacity"
        app:cardElevation="@dimen/_0sdp"
        android:layout_marginStart="@dimen/_12sdp"
        app:layout_constraintEnd_toEndOf="parent"
        android:alpha="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeWidth="@dimen/_0sdp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_title"
        style="@style/TextBold"
        android:layout_width="@dimen/_0sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginHorizontal="@dimen/_24sdp"
        android:text="@string/sheet_title_save_changes"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/drag_handle" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_body"
        style="@style/TextRegular"
        android:layout_width="@dimen/_0sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginHorizontal="@dimen/_24sdp"
        android:text="@string/sheet_body_save_changes"
        android:textSize="@dimen/_9ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_title" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_title"
        style="@style/TextInputLayout"
        android:layout_width="@dimen/_0sdp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_12sdp"
        app:boxBackgroundMode="filled"
        app:boxBackgroundColor="@color/colorCardBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_body">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_title"
            style="@style/TextMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:gravity="start"
            android:hint="@string/hint_file_name"
            android:imeOptions="actionNext"
            android:inputType="textMultiLine|textCapSentences"
            android:maxLines="3"
            android:text=""
            android:textSize="@dimen/_11sdp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_save"
        style="@style/MaterialButtonAccent"
        android:layout_width="@dimen/_0sdp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_6sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:text="@string/menu_save"
        android:textSize="@dimen/_11ssp"
        app:backgroundTint="@color/colorGreen"
        app:cornerRadius="@dimen/_8sdp"
        app:fontFamily="@font/semi_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_discard"
        app:layout_constraintTop_toBottomOf="@+id/input_title" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_discard"
        style="@style/MaterialButtonTransparent"
        android:layout_width="@dimen/_0sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:text="@string/button_discard"
        android:textSize="@dimen/_11ssp"
        app:backgroundTint="@color/colorCardBackground"
        app:cornerRadius="@dimen/_8sdp"
        app:fontFamily="@font/semi_bold"
        app:layout_constraintEnd_toStartOf="@+id/button_save"
        app:layout_constraintStart_toEndOf="@+id/button_cancel"
        app:layout_constraintTop_toBottomOf="@+id/input_title" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_cancel"
        style="@style/MaterialButtonTransparent"
        android:layout_width="@dimen/_0sdp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_6sdp"
        android:text="@string/button_cancel"
        android:textSize="@dimen/_11ssp"
        app:backgroundTint="@color/colorCardBackground"
        app:cornerRadius="@dimen/_8sdp"
        app:fontFamily="@font/semi_bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_discard"
        app:layout_constraintTop_toBottomOf="@+id/input_title" />


</androidx.constraintlayout.widget.ConstraintLayout>