<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorBackground"
    android:paddingHorizontal="@dimen/_24sdp"
    android:paddingTop="@dimen/_12sdp"
    android:paddingBottom="@dimen/_18sdp">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_rate"
        style="@style/TextBold"
        android:layout_width="@dimen/_0sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:text="@string/title_review_sheet"
        android:textSize="@dimen/_18ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_rate_body"
        style="@style/TextRegular"
        android:layout_width="@dimen/_0sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_4sdp"
        android:alpha="0.7"
        android:text="@string/body_review_sheet"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_rate" />

    <com.willy.ratingbar.ScaleRatingBar
        android:id="@+id/rating_bar"
        android:layout_width="@dimen/_0sdp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_rate_body"
        app:srb_clearRatingEnabled="false"
        app:srb_clickable="true"
        app:srb_drawableEmpty="@drawable/ic_icon_rate_inactive"
        app:srb_drawableFilled="@drawable/ic_icon_rate_active"
        app:srb_isIndicator="false"
        app:srb_minimumStars="0"
        app:srb_numStars="5"
        app:srb_rating="0"
        app:srb_scrollable="true"
        app:srb_starHeight="@dimen/_50sdp"
        app:srb_starWidth="@dimen/_50sdp"
        app:srb_stepSize="1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_review"
        style="@style/MaterialButtonAccent"
        android:layout_width="@dimen/_0sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:text="@string/button_submit_review"
        android:textAllCaps="true"
        android:textSize="@dimen/_11ssp"
        app:cornerRadius="@dimen/_8sdp"
        app:fontFamily="@font/bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rating_bar" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_cancel"
        style="@style/MaterialButtonAccent"
        android:layout_width="@dimen/_0sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_4sdp"
        android:text="@string/button_cancel"
        android:textAllCaps="true"
        android:textColor="@color/colorText"
        android:textSize="@dimen/_11ssp"
        app:backgroundTint="@color/colorCardBackground"
        app:cornerRadius="@dimen/_8sdp"
        app:fontFamily="@font/bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_review" />
</androidx.constraintlayout.widget.ConstraintLayout>