<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="1dp"
    android:background="@drawable/ic_bg_rounded_sheet"
    android:backgroundTint="@color/colorWhite"
    android:clipToOutline="true"
    android:paddingTop="@dimen/_12sdp"
    android:paddingBottom="@dimen/_8sdp">

    <androidx.cardview.widget.CardView
        android:id="@+id/drag_handle"
        android:layout_width="@dimen/_36sdp"
        android:layout_height="@dimen/_4sdp"
        android:layout_marginBottom="@dimen/_12sdp"
        app:cardBackgroundColor="@color/colorCardBackground"
        app:cardElevation="@dimen/_0sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeWidth="@dimen/_0sdp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/dialog_title"
        style="@style/TextBold"
        android:layout_width="@dimen/_0sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:text="@string/title_discard_changes"
        android:textSize="@dimen/_22sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/drag_handle" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/dialog_description"
        style="@style/TextRegular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_4sdp"
        android:alpha="0.7"
        android:text="@string/description_discard"
        android:textSize="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_title" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_discard"
        style="@style/MaterialButtonAccent"
        android:layout_width="@dimen/_0sdp"
        android:layout_height="@dimen/_32sdp"
        android:layout_marginHorizontal="@dimen/_36sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:paddingHorizontal="@dimen/_24sdp"
        android:text="@string/button_discard"
        android:textSize="@dimen/_14sdp"
        app:backgroundTint="@color/colorRed"
        app:cornerRadius="@dimen/_4sdp"
        app:fontFamily="@font/bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_description" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_cancel"
        style="@style/MaterialButtonAccent"
        android:layout_width="@dimen/_0sdp"
        android:layout_height="@dimen/_32sdp"
        android:layout_marginHorizontal="@dimen/_36sdp"
        android:layout_marginTop="@dimen/_4sdp"
        android:paddingHorizontal="@dimen/_24sdp"
        android:text="@string/button_cancel"
        android:textColor="@color/colorText"
        android:textSize="@dimen/_14sdp"
        app:backgroundTint="@color/colorCardBackground"
        app:cornerRadius="@dimen/_4sdp"
        app:fontFamily="@font/bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_discard"
        app:strokeWidth="0dp" />

</androidx.constraintlayout.widget.ConstraintLayout>